--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -13,7 +13,12 @@
     <header>
       <img src="images/logo-adare-restaurant.png" alt="Logo for Adare Restaurant">
       <nav>
-  
+        <a href="#">HOME</a>
+        <a href="#">MENU</a>
+        <a href="#">ORDER ONLINE</a>
+        <a href="#">GIFT VOUCHER</a>
+        <a href="#">CATERING</a>
+        <a href="#">CONTACT</a>
       </nav>
     </header>
   
@@ -23,11 +28,15 @@
       <h1>let's meat</h1>
       <p>We love sharing good food with great people. We bring over 30 years industry experience and passion to <a href="#">Adare</a>. With a dishes that are carefully designed to bring you a truly satisfying Irish food experience that you are sure to remember. 
       </p>
-      <a href="#" target="_blank">MAKE RESERVATION</a>
+      <a href="mailto: zubin131@gmail.com?Subject=Reservation" target="_blank">MAKE RESERVATION</a>
     </main>
+
+    <section class="maps">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33586.38748105824!2d-8.815006348742527!3d52.56495487152441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b460ddb875af7%3A0xdb34accde986ee58!2sThe%20Carriage%20House%20at%20Adare%20Manor!5e0!3m2!1sen!2sus!4v1659973249804!5m2!1sen!2sus" width="1024" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
   
     <footer>
-  
+      <p>Main St, Blackabbey, Adare, Co. Limerick - Copyright 2017ⓒ</p>
     </footer>
   </div>
   
