--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -12,6 +12,10 @@
   <!-- This is my own style sheet -->
   <link rel="stylesheet" href="./css/style.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
