fixed fonts & added cards

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/672e2effb4.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -38,10 +39,8 @@
     <main>
       <div class="herobox1">
         <h1>Mobile bike repairs.</h1>
-        <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home anywhere in greater Dublin.
-        <br>
-        Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike into a shop.
-        </p>
+        <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home anywhere in greater Dublin.</p>
+        <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike into a shop.</p>
       </div>
       <div class="herobox2">
         <img src="./images/image-bike-repair-service.jpg" alt="person servicing a bike in dublin">
@@ -49,9 +48,21 @@
     </main>
 
     <div class="cards">
-      <div class="card1"></div>
-      <div class="card2"></div>
-      <div class="card3"></div>
+      <div class="card1">
+        <i class="fa-solid fa-motorcycle"></i>
+        <h2>Book Online</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptatum quos deleniti cupiditate nihil debitis!</p>
+      </div>
+      <div class="card2">
+        <i class="fa-solid fa-gear"></i>
+        <h2>Service Type</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptatum quos deleniti cupiditate nihil debitis!</p>
+      </div>
+      <div class="card3">
+        <i class="fa-solid fa-headset"></i>
+        <h2>Call for Advice</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem voluptatum quos deleniti cupiditate nihil debitis!</p>
+      </div>
     </div>
   </div>
 </body>
